--- a/kz.conf
+++ b/kz.conf
@@ -1,8 +1,4 @@
-hostname=api-weather.andy.works, account.wps.cn
+hostname=api-weather.andy.works
 
 # 0000 Not Boring 四件套[天气、习惯、计算器、时间] 解锁会员权限（2022-06-29）@ddgksf2013
 ^https?:\/\/api-weather\.andy\.works\/v\d\/\w{13,18}$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/notboring.js
-
-# 0001 WPS
-^https?:\/\/account\.wps\.cn\/api\/v3\/mine\/vips url script-response-body https://raw.githubusercontent.com/Miroxyz/qx/main/js/wps1.js
-^https?:\/\/[a-z-]*account\.wps\.c(n|om)(:\d+|)\/api\/users url script-response-body https://raw.githubusercontent.com/Miroxyz/qx/main/js/wps1.js
