--- a/kz.conf
+++ b/kz.conf
@@ -2,3 +2,6 @@ hostname=api-weather.andy.works
 
 # 0000 Not Boring 四件套[天气、习惯、计算器、时间] 解锁会员权限（2022-06-29）@ddgksf2013
 ^https?:\/\/api-weather\.andy\.works\/v\d\/\w{13,18}$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/notboring.js
+
+# 0001 傲软抠图，需要登录 @ddgksf2013
+https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/apowersoft.js
