--- a/kz.conf
+++ b/kz.conf
@@ -1,4 +1,4 @@
-hostname=api-weather.andy.works
+hostname=api-weather.andy.works, *.aoscdn.com
 
 # 0000 Not Boring 四件套[天气、习惯、计算器、时间] 解锁会员权限（2022-06-29）@ddgksf2013
 ^https?:\/\/api-weather\.andy\.works\/v\d\/\w{13,18}$ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/notboring.js
